# qwen3-tts

./: .gitignore  .gitmodules  Cargo.toml  README-zh.md  README.md  build.rs
.cargo/: config.toml
cpp/: code_pred_ggml_shim.cpp
deploy/systemd/: install-frontend.sh  install-predictor.sh  install-talker.sh  install-user-systemd.sh  install-vocoder.sh  qwen3-tts-frontend.service  qwen3-tts-predictor.service  qwen3-tts-talker.service  qwen3-tts-vocoder.service
scripts/: benchmark_long_text.sh  convert_all.sh  convert_all_rk3588.py  convert_talker_gguf.py  convert_vocoder_rknn.py  deploy.sh  export_code_predictor.py  export_vocoder.py  extract_code_predictor_gguf.py  extract_embeddings.py  extract_talker.py  llama_wrapper.c  requantize_gguf.py
src/: audio.rs  cli.rs  config.rs  download.rs  lib.rs  main.rs  pipeline.rs  protocol.rs  speech_tokenizer.rs  voice_loader.rs  voices.rs  worker_client.rs
src/api/: openai.rs
src/api/static/: index.html
src/mcp/: server.rs
src/worker/: candle_qwen3.rs  code_predictor.rs  code_predictor_candle.rs  code_predictor_ggml.rs  embedder.rs  mod.rs  sampling.rs  talker.rs  talker_llamacpp.rs  vocoder.rs
worker/: pyproject.toml
