[package]
name = "qwen3-tts-rs"
version = "0.1.1"
edition = "2021"
description = "Distributed Qwen3-TTS inference on RK3588 cluster"
license = "MIT"

[[bin]]
name = "qwen3-tts"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# HTTP server (OpenAI API)
axum = { version = "0.8.8", features = ["multipart"] }
tower-http = { version = "0.6.8", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# HTTP client (for worker health checks)
reqwest = { version = "0.13.2", features = ["json"] }

# Audio
hound = "3"

# Error handling
anyhow = "1"
thiserror = "2.0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.9.8"

# UUID for request IDs
uuid = { version = "1", features = ["v4"] }

# --- Worker dependencies ---
# Numeric arrays & .npy/.npz loading
ndarray = "0.17"
ndarray-npy = "0.10"

# Dynamic library loading (rknn)
libloading = { version = "0.9.0", optional = true }

# ONNX Runtime (Vocoder default, CodePredictor fallback)
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic", "ndarray"] }

# HuggingFace tokenizer
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }

# Random sampling
rand = "0.10.0"

# HuggingFace Hub model download
hf-hub = "0.5.0"

# Platform directories
dirs = "6"

# Candle (speech tokenizer encoder for voice cloning on ARM)
candle-core-aarch64-sdot = "0.9.2"
candle-core = "0.9.2"
candle-nn = "0.9.2"
safetensors = "0.7.0"

# Zip (for npz loading in ggml-backend)
zip = { version = "8.2.0", optional = true, default-features = false, features = ["deflate"] }
# Byte casting (for npy parsing in ggml-backend)
bytemuck = { version = "1", optional = true, features = ["derive"] }

# CPU affinity (sched_setaffinity)
libc = "0.2"

[features]
default = []
rknn-vocoder = ["dep:libloading"]  # Use RKNN INT8 NPU vocoder instead of ONNX FP32 (faster, has quantization noise)
ggml-backend = ["dep:libloading"]  # Use C++ GGML for both talker and predictor (needs external .so)
ggml-predictor = []  # Use C++ GGML only for code predictor (3x faster on ARM, needs libcode_pred_ggml.a)
onnx-cuda = []  # Enable ONNX Runtime CUDA execution provider (opt-in)

[patch.crates-io]
#candle-core = { git = "https://github.com/darkautism/candle.git", branch = "feat/aarch64-sdot" }
